--- a/qltv.css
+++ b/qltv.css
@@ -1,3 +1,9 @@
+* {
+    padding: 0;
+    margin: 0;
+    font-family: Arial, sans-serif;
+    box-sizing: border-box;
+}
 header{
     width: 100%;
     height: fit-content;
